@@ -58,7 +58,7 @@
     {% endif %}
 
     <!-- Favicon -->
-    {% set icon = icon | default('assets/images/favicon.ico') %}
+    {% set icon = icon | default("assets/images/favicon.ico") %}
     <link rel="shortcut icon" type="image/x-icon"
       href="{{ base_url }}/{{ icon }}" />
     <link rel="icon" type="image/x-icon"
@@ -87,15 +87,9 @@
       href="{{ base_url }}/assets/stylesheets/application.css" />
 
     <!-- Configure webfonts -->
-    {% if config.extra.font != 'none' %}
-      {% set text = 'Ubuntu' %}
-      {% if config.extra.font and config.extra.font.text %}
-        {% set text = config.extra.font.text %}
-      {% endif %}
-      {% set code = 'Ubuntu Mono' %}
-      {% if config.extra.font and config.extra.font.code %}
-        {% set code = config.extra.font.code %}
-      {% endif %}
+    {% if config.extra.font != "none" %}
+      {% set text = config.extra.get("font", {}).text | default("Ubuntu") %}
+      {% set code = config.extra.get("font", {}).code | default("Ubuntu Mono") %}
       {% set font = text + ':400,700|' + code | replace(' ', '+') %}
       <link rel="stylesheet" type="text/css"
         href="//fonts.googleapis.com/css?family={{ font }}" />
@@ -127,9 +121,9 @@
       regular expressions out-of-the-box. Since there might be a slash at the
       end of the repository name, we just do a string comparison and kill it.
     -->
-    {% if repo_name == 'GitHub' and repo_url %}
-      {% set repo_id = repo_url | replace('https://github.com/', '') %}
-      {% if repo_id[-1:] == '/' %}
+    {% if repo_name == "GitHub" and repo_url %}
+      {% set repo_id = repo_url | replace("https://github.com/", "") %}
+      {% if repo_id[-1:] == "/" %}
         {% set repo_id = repo_id[:-1] %}
       {% endif %}
     {% endif %}
@@ -173,11 +167,7 @@
 
           <!-- Headline -->
           {% if not h1 %}
-            {% if page_title %}
-              <h1>{{ page_title }}</h1>
-            {% else %}
-              <h1>{{ site_name }}</h1>
-            {% endif %}
+            <h1>{{ page_title | default(site_name, true)}}</h1>
           {% endif %}
 
           <!-- Article content -->
